[package]
name = "http_sig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
ecdsa = { version = "0.16.9", features = ["signing"] }
http = "1.1.0"
indexmap = "2.2.6"
p256 = "0.13.2"
sfv = "0.9.4"
sha2 = "0.10.8"
thiserror = "1.0.58"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"]}

[lib]
