[package]
name = "http_sig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
http = "1.1.0"
indexmap = "2.2.6"
sfv = "0.9.4"
p256 = {version = "0.13.2", optional = true}
thiserror = "1.0.58"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"]}

[dev-dependencies]
p256 = {version = "0.13.2"}
indoc = "2"

[features]
p256 = ["dep:p256"]

[lib]